# APK-Reverse-Eng-Challenge

./: .dockerignore  .gitignore  BUILD.md  COMPLETE_SUMMARY.md  DOCKER_BUILD.md  Dockerfile  FILE_STRUCTURE.md  GITHUB_ACTIONS_GUIDE.md  QUICKSTART.md  README.md  README_GITHUB.md  SETUP_GUIDE.md  SOLUTION.md  build-docker.sh  build.sh  docker-build-simple.sh  docker-compose.yml  frida_bypass.js  settings.gradle  setup_github.sh
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ctf/secureapp/: HiddenCheck.java  MainActivity.java
app/src/main/res/drawable/: button_background.xml  input_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
